--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 <title>Hi Everyone~</title>
 <h1>Welcome to the website which be created by xiaoyaona.</h1></br>
 <p>Would you like go with me?</p>
-<img src="https://api.r10086.com/动漫综合1.php"></img>
+<img src="https://api.r10086.com/少女前线1.php"></img>
 </body></html>
