--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html><body>
 <title>Hi Everyone~</title>
 <h1>Welcome to the website which be created by xiaoyaona.</h1></br>
-<p>Would you like go with me?</p>
+<p>Would you like go with me?</p></br>
+ <p>欢迎来到逍遥的主页！</p>
 <img src="https://api.r10086.com/少女前线1.php"></img>
 </body></html>
