--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <h1>Welcome to the website which be created by xiaoyaona.</h1></br>
 <p>Would you like go with me?</p></br>
  <p>欢迎来到逍遥的主页！</p>
-<!-- <img src="https://api.r10086.com/少女前线1.php"></img>>
+<!-- <img src="https://api.r10086.com/少女前线1.php"></img>-->
 <img src="http://101.43.104.95:19755/"></img>
 </body></html>
