--- a/mc/index.html
+++ b/mc/index.html
@@ -9,6 +9,6 @@
       服务器ip game.mc-aurora.site
       服务器端口 19132
     </p>
-  <a herf="http://www.moeiris.com/mc/minecraft.apk">下载客户端 Minecraft.apk</a>
+  <a href="http://www.moeiris.com/mc/minecraft.apk">下载客户端 Minecraft.apk</a>
   </body>
 </html>
