--- a/mc/index.html
+++ b/mc/index.html
@@ -4,10 +4,10 @@
     <h1>Aurora-Dream  飘渺深空服务器</h1>
     </br>
     <p>
-      服务器使用 官方服务端 bedrock_server 启动。
-      服务器版本 1.18.2(.03)
-      服务器ip game.mc-aurora.site
-      服务器端口 19132
+      服务器使用 官方服务端 bedrock_server 启动。</br>
+      服务器版本 1.18.2(.03)</br>
+      服务器ip game.mc-aurora.site</br>
+      服务器端口 19132</br>
     </p>
   <a href="http://www.moeiris.com/mc/minecraft.apk">下载客户端 Minecraft.apk</a>
   </body>
