--- a/mc/index.html
+++ b/mc/index.html
@@ -9,6 +9,6 @@
       服务器ip game.mc-aurora.site</br>
       服务器端口 19132</br>
     </p>
-  <a href="http://www.moeiris.com/mc/minecraft.apk">下载客户端 Minecraft.apk</a>
+  <a href="https://share.weiyun.com/VcwE7pyk">下载客户端 Minecraft.apk</a>
   </body>
 </html>
