--- a/404.html
+++ b/404.html
@@ -8,13 +8,13 @@
     <link rel="icon" href="/logo.jpg">
     <meta name="description" content="我的个人网站">
     
-    <link rel="preload" href="/assets/css/0.styles.cb606601.css" as="style"><link rel="preload" href="/assets/js/app.a1e21f1e.js" as="script"><link rel="preload" href="/assets/js/6.4c47b3f4.js" as="script"><link rel="prefetch" href="/assets/js/10.c354456a.js"><link rel="prefetch" href="/assets/js/2.282d692d.js"><link rel="prefetch" href="/assets/js/3.b16ccd83.js"><link rel="prefetch" href="/assets/js/4.0ed3c53c.js"><link rel="prefetch" href="/assets/js/5.b58fa34e.js"><link rel="prefetch" href="/assets/js/7.bf608b05.js"><link rel="prefetch" href="/assets/js/8.4c13bc7d.js"><link rel="prefetch" href="/assets/js/9.f9d5c3e3.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.cb606601.css">
+    <link rel="preload" href="/assets/css/0.styles.66d0fea3.css" as="style"><link rel="preload" href="/assets/js/app.e2f9d4b8.js" as="script"><link rel="preload" href="/assets/js/6.4c47b3f4.js" as="script"><link rel="prefetch" href="/assets/js/10.b707255f.js"><link rel="prefetch" href="/assets/js/2.282d692d.js"><link rel="prefetch" href="/assets/js/3.b16ccd83.js"><link rel="prefetch" href="/assets/js/4.129e0696.js"><link rel="prefetch" href="/assets/js/5.102cb107.js"><link rel="prefetch" href="/assets/js/7.f09fdd39.js"><link rel="prefetch" href="/assets/js/8.a5661b79.js"><link rel="prefetch" href="/assets/js/9.de9badaa.js">
+    <link rel="stylesheet" href="/assets/css/0.styles.66d0fea3.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.a1e21f1e.js" defer></script><script src="/assets/js/6.4c47b3f4.js" defer></script>
+    <script src="/assets/js/app.e2f9d4b8.js" defer></script><script src="/assets/js/6.4c47b3f4.js" defer></script>
   </body>
 </html>
