--- a/404.html
+++ b/404.html
@@ -8,13 +8,13 @@
     <link rel="icon" href="logo.jpg">
     <meta name="description" content="我的个人网站">
     
-    <link rel="preload" href="/assets/css/0.styles.66d0fea3.css" as="style"><link rel="preload" href="/assets/js/app.23f62ba6.js" as="script"><link rel="preload" href="/assets/js/6.4c47b3f4.js" as="script"><link rel="prefetch" href="/assets/js/10.ba8d964e.js"><link rel="prefetch" href="/assets/js/2.282d692d.js"><link rel="prefetch" href="/assets/js/3.b16ccd83.js"><link rel="prefetch" href="/assets/js/4.129e0696.js"><link rel="prefetch" href="/assets/js/5.102cb107.js"><link rel="prefetch" href="/assets/js/7.abcc32c2.js"><link rel="prefetch" href="/assets/js/8.a5661b79.js"><link rel="prefetch" href="/assets/js/9.a57382a2.js">
+    <link rel="preload" href="/assets/css/0.styles.66d0fea3.css" as="style"><link rel="preload" href="/assets/js/app.d8b81465.js" as="script"><link rel="preload" href="/assets/js/6.4c47b3f4.js" as="script"><link rel="prefetch" href="/assets/js/10.1c419889.js"><link rel="prefetch" href="/assets/js/11.848b953a.js"><link rel="prefetch" href="/assets/js/2.282d692d.js"><link rel="prefetch" href="/assets/js/3.371a3617.js"><link rel="prefetch" href="/assets/js/4.129e0696.js"><link rel="prefetch" href="/assets/js/5.102cb107.js"><link rel="prefetch" href="/assets/js/7.d1a66a65.js"><link rel="prefetch" href="/assets/js/8.6b8ac06e.js"><link rel="prefetch" href="/assets/js/9.bd7565cd.js">
     <link rel="stylesheet" href="/assets/css/0.styles.66d0fea3.css">
   </head>
   <body>
     <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.23f62ba6.js" defer></script><script src="/assets/js/6.4c47b3f4.js" defer></script>
+    <script src="/assets/js/app.d8b81465.js" defer></script><script src="/assets/js/6.4c47b3f4.js" defer></script>
   </body>
 </html>
